--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
-  <head>
-    <title>CSCI 225 Webpage of Andrew Nguyen</title>
-  </head>
 
-  <body>
-    
-  </body>
+<head>
+  <title>CSCI 225 Webpage of Andrew Nguyen</title>
+</head>
+
+<body>
+
+  <div class="navbar">
+
+  </div>
+
+  <div class="introduction"></div>
+  <div class="assignment"></div>
+  <div class="portfolio"></div>
+  <div class="address"></div>
+  <div class="schedule"></div>
+</body>
+
 </html>
