h1 tags for each div

--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
 <body>
 
   <div class="navbar">
-
+    <p><a href="https://www.usca.edu">USC Aiken Website</a></p>
+    <p><a href="https://www.amazon.com/">Amazon</a></p>
   </div>
 
-  <div class="introduction"></div>
-  <div class="assignment"></div>
-  <div class="portfolio"></div>
-  <div class="address"></div>
-  <div class="schedule"></div>
+  <div class="introduction">
+    <h1>Introduction</h1>
+  </div>
+  <div class="assignment">
+    <h1>Assignment</h1>
+  </div>
+  <div class="portfolio">
+    <h1>Portfolio</h1>
+  </div>
+  <div class="address">
+    <h1>address</h1>
+  </div>
+  <div class="schedule">
+    <h1>schedule</h1>
+  </div>
 </body>
 
 </html>
