--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <div class="introduction">
     <h1>Introduction</h1>
+    <p>My name is Andrew Nguyen, and I am a Computer Science Major (no concentration). I like to go to watch movies and play games
+      with my family.  I like fried chicken.  I like going swimming.
+    </p>
   </div>
   <div class="assignment">
     <h1>Assignment</h1>
