--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <p>My name is Andrew Nguyen, and I am a Computer Science Major (no concentration). I like to go to watch movies and play games
       with my family.  I like fried chicken.  I like going swimming.
     </p>
+
+    <img src="img/water.jpg" >
   </div>
   <div class="assignment">
     <h1>Assignment</h1>
