ordered list of assignments

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   </div>
   <div class="assignment">
     <h1>Assignment</h1>
+    <ol>
+      <li>Assignment 0</li>
+      <li>Assignment 1</li>
+    </ol>
   </div>
   <div class="portfolio">
     <h1>Portfolio</h1>
