description of the skills of my school projects

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
   <div class="introduction">
     <h1>Introduction</h1>
-    <p>My name is Andrew Nguyen, and I am a Computer Science Major (no concentration). I like to go to watch movies and play games
-      with my family.  I like fried chicken.  I like going swimming.
+    <p>My name is Andrew Nguyen, and I am a Computer Science Major (no concentration). I like to go to watch movies and
+      play games
+      with my family. I like fried chicken. I like going swimming.
     </p>
 
-    <img src="img/water.jpg" >
+    <img src="img/water.jpg">
   </div>
   <div class="assignment">
     <h1>Assignment</h1>
@@ -28,10 +29,26 @@
   </div>
   <div class="portfolio">
     <h1>Portfolio</h1>
+    <ul>
+      <li>Traffic Ticket Application</li>
+      <li>Compound Interest Application</li>
+      <li>Flight Planner Application</li>
+
+      <h3>Description</h3>
+      <p>The Traffic Ticket Application involved python programming.  
+         The application calculates the cost of a traffic ticket based on the user's speed.
+        The Compound Interest Application involved Visual Basic programming and creating a 
+        presentation of User Interface, program logic, and the functionality.
+         The Flight Planner Application involved using Java Code.  
+         My team used Java swing to create the front end, 
+         and used different data structures to pull the data from the backend.  We used a text file as a database </p>
+    </ul>
   </div>
   <div class="address">
     <h1>address</h1>
-    <p><a href=" https://usca0-my.sharepoint.com/:b:/g/personal/yilianz_usca_edu1/EWzbYQdVM-tKrNgenATb4_EBz_z_H7MsjkV2s1xsccptMA?e=lnOwbW">Assignment1.pdf</a></p>
+    <p><a
+        href=" https://usca0-my.sharepoint.com/:b:/g/personal/yilianz_usca_edu1/EWzbYQdVM-tKrNgenATb4_EBz_z_H7MsjkV2s1xsccptMA?e=lnOwbW">Assignment1.pdf</a>
+    </p>
   </div>
   <div class="schedule">
     <h1>schedule</h1>
