--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <div class="navbar">
     <p><a href="https://www.usca.edu">USC Aiken Website</a></p>
+    <p><a href=".assignment">Assignment Section</a></p>
+  
     <p><a href="https://www.amazon.com/">Amazon</a></p>
   </div>
 
