address section and my email address

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="navbar">
     <p><a href="https://www.usca.edu">USC Aiken Website</a></p>
     <p><a href=".assignment">Assignment Section</a></p>
-  
+    <p><a href=".address">Address Section</a></p>
     <p><a href="https://www.amazon.com/">Amazon</a></p>
   </div>
 
@@ -51,6 +51,9 @@
     <p><a
         href=" https://usca0-my.sharepoint.com/:b:/g/personal/yilianz_usca_edu1/EWzbYQdVM-tKrNgenATb4_EBz_z_H7MsjkV2s1xsccptMA?e=lnOwbW">Assignment1.pdf</a>
     </p>
+
+    <p><a href="drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a></p>
+    
   </div>
   <div class="schedule">
     <h1>schedule</h1>
