usca email address

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         href=" https://usca0-my.sharepoint.com/:b:/g/personal/yilianz_usca_edu1/EWzbYQdVM-tKrNgenATb4_EBz_z_H7MsjkV2s1xsccptMA?e=lnOwbW">Assignment1.pdf</a>
     </p>
 
-    <p><a href="drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a></p>
-    
+    <p><a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a></p>
+    <p><a href="andrewtn@usca.edu">andrewtn@usca.edu</a></p>
   </div>
   <div class="schedule">
     <h1>schedule</h1>
