--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div class="navbar">
     <p><a href="https://www.usca.edu">USC Aiken Website</a></p>
     <p><a href=".assignment">Assignment Section</a></p>
+    <p><a href="https://www.espn.com/">ESPN</a></p>
     <p><a href=".address">Address Section</a></p>
     <p><a href="https://www.amazon.com/">Amazon</a></p>
   </div>
