--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <div class="navbar">
     <p><a href="https://www.usca.edu">USC Aiken Website</a></p>
-    <p><a href=".assignment">Assignment Section</a></p>
+    <p><a href="#assignment-section">Assignment Section</a></p>
+    <p><a href="#contact-information-section">Contact Information Section</a></p>
     <p><a href="https://www.espn.com/">ESPN</a></p>
     <p><a href=".address">Address Section</a></p>
     <p><a href="https://www.amazon.com/">Amazon</a></p>
@@ -24,7 +25,7 @@
     <img src="img/water.jpg">
   </div>
   <div class="assignment">
-    <h1>Assignment</h1>
+    <h1 id="assignment-Section">Assignment</h1>
     <ol>
       <li>Assignment 0</li>
       <li>Assignment 1</li>
@@ -48,7 +49,7 @@
     </ul>
   </div>
   <div class="address">
-    <h1>address</h1>
+    <h1 id="contact-information-section">address</h1>
     <p><a
         href=" https://usca0-my.sharepoint.com/:b:/g/personal/yilianz_usca_edu1/EWzbYQdVM-tKrNgenATb4_EBz_z_H7MsjkV2s1xsccptMA?e=lnOwbW">Assignment1.pdf</a>
     </p>
