assignment section h1 tag updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="img/water.jpg">
   </div>
   <div class="assignment">
-    <h1 id="assignment-Section">Assignment</h1>
+    <h1 id="assignment-section">Assignment</h1>
     <ol>
       <li>Assignment 0</li>
       <li>Assignment 1</li>
