--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </ul>
   </div>
   <div class="address">
-    <h1 id="contact-information-section">address</h1>
+    <p id="contact-information-section">address</p>
     <p><a
         href=" https://usca0-my.sharepoint.com/:b:/g/personal/yilianz_usca_edu1/EWzbYQdVM-tKrNgenATb4_EBz_z_H7MsjkV2s1xsccptMA?e=lnOwbW">Assignment1.pdf</a>
     </p>
