mailto update for usca email link

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
     </p>
 
     <p><a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a></p>
-    <p><a href="andrewtn@usca.edu">andrewtn@usca.edu</a></p>
+    <p><a href="mailto:andrewtn@usca.edu">andrewtn@usca.edu</a></p>
   </div>
   <div class="schedule">
     <h1>schedule</h1>
+
   </div>
 </body>
 
