--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="address">
     <p id="contact-information-section">Contact Information</p>
     <p><a
-        href=" https://usca0-my.sharepoint.com/:b:/g/personal/yilianz_usca_edu1/EWzbYQdVM-tKrNgenATb4_EBz_z_H7MsjkV2s1xsccptMA?e=lnOwbW">Assignment1.pdf</a>
+        href="doc/Assignment1.pdf">Assignment1.pdf</a>
     </p>
 
     <p><a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a></p>
