--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
 <body>
 
   <div class="navbar">
-    <p><a href="https://www.usca.edu">USC Aiken Website</a></p>
-    <p><a href="#assignment-section">Assignment Section</a></p>
-    <p><a href="#contact-information-section">Contact Information Section</a></p>
-    <p><a href="https://www.espn.com/">ESPN</a></p>
-    <p><a href="https://www.amazon.com/">Amazon</a></p>
+    <p>
+      <a href="https://www.usca.edu">USC Aiken Website</a>
+    </p>
+    <p>
+      <a href="#assignment-section">Assignment Section</a>
+    </p>
+    <p>
+      <a href="#contact-information-section">Contact Information Section</a>
+    </p>
+    <p>
+      <a href="https://www.espn.com/">ESPN</a>
+    </p>
+    <p>
+      <a href="https://www.amazon.com/">Amazon</a>
+    </p>
   </div>
 
   <div class="introduction">
@@ -38,27 +48,65 @@
       <li>Flight Planner Application</li>
 
       <h3>Description</h3>
-      <p>The Traffic Ticket Application involved python programming.  
-         The application calculates the cost of a traffic ticket based on the user's speed.
-        The Compound Interest Application involved Visual Basic programming and creating a 
+      <p>The Traffic Ticket Application involved python programming.
+        The application calculates the cost of a traffic ticket based on the user's speed.
+        The Compound Interest Application involved Visual Basic programming and creating a
         presentation of User Interface, program logic, and the functionality.
-         The Flight Planner Application involved using Java Code.  
-         My team used Java swing to create the front end, 
-         and used different data structures to pull the data from the backend.  We used a text file as a database </p>
+        The Flight Planner Application involved using Java Code.
+        My team used Java swing to create the front end,
+        and used different data structures to pull the data from the backend. We used a text file as a database </p>
     </ul>
   </div>
   <div class="address">
     <p id="contact-information-section">Contact Information</p>
-    <p><a
-        href="doc/Assignment1.pdf">Assignment1.pdf</a>
+    <p>
+      <a href="doc/Assignment1.pdf">Assignment1.pdf</a>
     </p>
 
-    <p><a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a></p>
-    <p><a href="mailto:andrewtn@usca.edu">andrewtn@usca.edu</a></p>
+    <p>
+      <a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a>
+    </p>
+    <p>
+      <a href="mailto:andrewtn@usca.edu">andrewtn@usca.edu</a>
+    </p>
   </div>
   <div class="schedule">
-    <h1>schedule</h1>
-
+    <h1>Schedule</h1>
+    <table>
+      <tr>
+        <td colspan="4"> My USC Aiken class schedule</td>
+      </tr>
+      <tr>
+        <td>Class</td>
+        <td>Class Time</td>
+        <td>Credit Hours</td>
+      </tr>
+      <tr>
+        <td>Algorithmic Design II</td>
+        <td>3:00p.m. - 5:00p.m.</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <td>Software Engineering</td>
+        <td>12:00 p.m. - 2:00 p.m.</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>2:45p.m. - 4:15p.m.</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>English A102</td>
+        <td>7:00 a.m. - 8:15 a.m.</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <td>Microeconomics A101</td>
+        <td>9:00 a.m. - 10:15 p.m.</td>
+        <td>3</td>
+      </tr>
+    </table>
   </div>
 </body>
 
