border for my table

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
   <div class="schedule">
     <h1>Schedule</h1>
-    <table>
+    <table border="1">
       <tr>
         <td colspan="4"> My USC Aiken class schedule</td>
       </tr>
