Days column added to first table

--- a/index.html
+++ b/index.html
@@ -80,31 +80,37 @@
       <tr>
         <td>Class</td>
         <td>Class Time</td>
+        <td>Days</td>
         <td>Credit Hours</td>
       </tr>
       <tr>
         <td>Algorithmic Design II</td>
         <td>3:00p.m. - 5:00p.m.</td>
+        <td>Monday and Wednesday</td>
         <td>3</td>
       </tr>
       <tr>
         <td>Software Engineering</td>
         <td>12:00 p.m. - 2:00 p.m.</td>
+        <td>Tuesday and Thursday</td>
         <td>3</td>
       </tr>
       <tr>
         <td>Web Development</td>
         <td>2:45p.m. - 4:15p.m.</td>
+        <td>Monday and Wednesday</td>
         <td>3</td>
       </tr>
       <tr>
         <td>English A102</td>
         <td>7:00 a.m. - 8:15 a.m.</td>
+        <td>Monday, Tuesday, Thursday, Friday</td>
         <td>4</td>
       </tr>
       <tr>
         <td>Microeconomics A101</td>
         <td>9:00 a.m. - 10:15 p.m.</td>
+        <td>Online</td>
         <td>3</td>
       </tr>
     </table>
