--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
       </tr>
       <tr>
         <td>English A102</td>
-        <td>7:00 a.m. - 8:15 a.m.</td>
-        <td>Monday, Tuesday, Thursday, Friday</td>
+        <td>9:00 a.m. - 10:00 a.m.</td>
+        <td>Tuesday, Wednesday, Thursday, Friday</td>
         <td>4</td>
       </tr>
       <tr>
@@ -126,7 +126,7 @@
       <tr><td>12:00 - 1:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>1:00 - 2:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>2:00 - 3:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><td>3:00 - 4:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+      <tr><td>3:00 - 4:00</td rowspan=2>Algorithmic Design II<td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>4:00 - 5:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>5:00 - 6:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>6:00 - 7:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
