--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <tr><td>12:00 - 1:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>1:00 - 2:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>2:00 - 3:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><td>3:00 - 4:00</td rowspan=2>Algorithmic Design II<td></td><td></td><td></td><td></td><td></td><td></td></tr>
+      <tr><td>3:00 - 4:00</td rowspan=2>Algorithmic Design II<td></td><td rowspan="2">Algorithmic Design II</td><td></td><td></td><td></td><td></td></tr>
       <tr><td>4:00 - 5:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>5:00 - 6:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>6:00 - 7:00</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
