--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </tr>
       <tr>
         <td>Algorithmic Design II</td>
-        <td>3:00p.m. - 5:00p.m.</td>
+        <td>3:00p.m. - 4:50p.m.</td>
         <td>Monday and Wednesday</td>
         <td>3</td>
       </tr>
@@ -102,9 +102,9 @@
         <td>3</td>
       </tr>
       <tr>
-        <td>English A102</td>
-        <td>9:00 a.m. - 10:00 a.m.</td>
-        <td>Tuesday, Wednesday, Thursday, Friday</td>
+        <td>English A101</td>
+        <td>9:00 a.m. - 11:00 a.m.</td>
+        <td>Monday, Tuesday, Wednesday, Thursday, Friday</td>
         <td>4</td>
       </tr>
       <tr>
@@ -116,8 +116,19 @@
     </table>
 
     <br>
-    
-   
+
+    <table border="1">
+      <tr><td>8:00 - 9:00</td></tr>
+      <tr><td>9:00 - 10:00</td></tr>
+      <tr><td>10:00 - 11:00</td></tr>
+      <tr><td>11:00 - 12:00</td></tr>
+      <tr><td>12:00 - 1:00</td></tr>
+      <tr><td>1:00 - 2:00</td></tr>
+      <tr><td>2:00 - 3:00</td></tr>
+      <tr><td>3:00 - 4:00</td></tr>
+    </table>
+
+
   </div>
 </body>
 
