--- a/index.html
+++ b/index.html
@@ -118,14 +118,89 @@
     <br>
 
     <table border="1">
-      <tr><td></td><td>Monday</td><td>Tuesday</td><td>Wednesday</td><td>Thursday</td><td>Friday</td><td>Saturday</td><td>Sunday</td></tr>
-      <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+      <tr>
+        <td></td>
+        <td>Monday</td>
+        <td>Tuesday</td>
+        <td>Wednesday</td>
+        <td>Thursday</td>
+        <td>Friday</td>
+        <td>Saturday</td>
+        <td>Sunday</td>
+      </tr>
+      <tr>
+        <td>9:00 - 10:00</td>
+        <td></td>
+        <td colspan="4" rowspan="2">English A101</td>>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>10:00 - 11:00</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>11:00 - 12:00</td>
+        <td rowspan="2">Web Development</td>
+        <td></td>
+        <td rowspan="2">Web Development</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>12:00 - 1:00</td>
+        <td rowspan="3">Software Engineering</td>
+        <td></td>
+        <td rowspan="3">Software Engineering</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>1:00 - 2:00</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>2:00 - 3:00</td>
+        <td rowspan="3">Algorithmic Design II</td>
+        <td rowspan="3">Algorithmic Design II</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>3:00 - 4:00</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>4:00 - 5:00</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>5:00 - 6:00</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
     </table>
 
 
