--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
           <td></td>
         </tr>
     </table>
+
+    <footer>
+      <p>&copy;, Andrew Nguyen</p>
+    </footer>
   </div>
 </body>
 
