--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <tr>
         <td>English A101</td>
         <td>9:00 a.m. - 11:00 a.m.</td>
-        <td>Monday, Tuesday, Wednesday, Thursday, Friday</td>
+        <td>Tuesday, Wednesday, Thursday, Friday</td>
         <td>4</td>
       </tr>
       <tr>
@@ -155,13 +155,12 @@
           <td>12:00 - 1:00</td>
           <td rowspan="3">Software Engineering</td>
           <td></td>
-          <td rowspan="3">Software Engineering</td>
+          <td rowspan="2">Software Engineering</td>
           <td></td>
           <td></td>
         </tr>
         <tr>
           <td>1:00 - 2:00</td>
-          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -204,7 +203,7 @@
     </table>
 
     <footer>
-      <p>&copy;, Andrew Nguyen</p>
+      <p>&copy;Copyright, Andrew Nguyen</p>
     </footer>
   </div>
 </body>
