--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <tr>
         <td>English A101</td>
         <td>9:00 a.m. - 11:00 a.m.</td>
-        <td>Tuesday, Wednesday, Thursday, Friday</td>
+        <td>Monday, Tuesday, Wednesday, Thursday, Friday</td>
         <td>4</td>
       </tr>
       <tr>
