English A101 schedule change

--- a/index.html
+++ b/index.html
@@ -131,13 +131,12 @@
       <tr>
         <td>9:00 - 10:00</td>
         <td></td>
-        <td colspan="4">English A101</td>
+        <td colspan="4" rowspan="2">English A101</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
         <td>10:00 - 11:00</td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
