--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <li>Flight Planner Application</li>
 
       <h3>Description</h3>
-      <p>The Traffic Ticket Application involved python programming.
+      <p>The Traffic Ticket Application involved <sub>python</sub> programming.
         The application calculates the cost of a traffic ticket based on the user's speed.
         The Compound Interest Application involved Visual Basic programming and creating a
         presentation of User Interface, program logic, and the functionality.
