decoration tag changes in the description

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       <li>Flight Planner Application</li>
 
       <h3>Description</h3>
-      <p>The Traffic Ticket Application involved <sub>python</sub> programming.
+      <p>The <strong>Traffic Ticket Application</strong> involved <em>Python</em> programming.
         The application calculates the cost of a traffic ticket based on the user's speed.
-        The Compound Interest Application involved Visual Basic programming and creating a
+        The Compound Interest Application involved <em>Visual Basic</em> programming and creating a
         presentation of User Interface, program logic, and the functionality.
-        The Flight Planner Application involved using Java Code.
+        The <strong>Flight Planner Application</strong> involved using Java Code.
         My team used Java swing to create the front end,
-        and used different data structures to pull the data from the backend. We used a text file as a database </p>
+        and used different data structures to pull the <i>data</i>from the backend. We used a text file as a database </p>
     </ul>
   </div>
   <div class="address">
