--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <body>
 
   <div class="navbar">
+    <ul>
+      <li>Fried Chicken</li>
+      <li>Restaurant Style Tortilla Chips</li>
+      <li>Chocolate Ice Cream</li>
+      <li>Tacos</li>
+      <li>Chicken Fried Rice</li>
+    </ul>
+    
     <p>
       <a href="https://www.usca.edu">USC Aiken Website</a>
     </p>
