--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSCI 225 Webpage of Andrew Nguyen</title>
+
 </head>
 
 <body>
