alt attribute added to an image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       with my family. I like fried chicken. I like going swimming.
     </p>
 
-    <img src="img/water.jpg">
+    <img src="img/water.jpg" alt="water image">
   </div>
   <div class="assignment">
     <h1 id="assignment-section">Assignment</h1>
