--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <li>Assignment 1</li>
     </ol>
 
+    <p><a href="doc/ContactMe.html">ContactMe.html</a></p>
     <p>
       <a href="doc/Assignment1.pdf">Assignment1.pdf</a>
     </p>
@@ -221,6 +222,9 @@
       <p>&copy;Copyright, Andrew Nguyen</p>
     </footer>
   </div>
+
+
+
 </body>
 
 </html>
