--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <li>Assignment 1</li>
     </ol>
 
-    <p><a href="doc/ContactMe.html">ContactMe.html</a></p>
+    <p><a href="ContactMe.html">ContactMe.html</a></p>
     <p>
       <a href="doc/Assignment1.pdf">Assignment1.pdf</a>
     </p>
