--- a/ContactMe.html
+++ b/ContactMe.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <video src="img/20230925_102004_1.mp4" preload controls loop></video>
+  <iframe width="400" height="400" src="video/20230925_102004_1.mp4" allowfullscreen></iframe>
   <form action="" name="feedback">
     <fieldset>
       <legend>Contact info</legend>
