--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSCI 225 Webpage of Andrew Nguyen</title>
+  <link rel="stylesheet" href="css/home.css">
 
 </head>
 
@@ -39,7 +40,8 @@
     <h1>Introduction</h1>
     <p>My name is Andrew Nguyen, and I am a Computer Science Major (no concentration). I like to go to watch movies and
       play games
-      with my family. I like fried chicken. I like going swimming.
+      with my family. I like fried chicken. I like going swimming.  My favorite programming languages are Python and Java.
+      My favorite board game is Monopoly. 
     </p>
 
     <img src="img/water.jpg" alt="water image">
