--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p>My name is Andrew Nguyen, and I am a Computer Science Major (no concentration). I like to go to watch movies and
       play games
       with my family. I like fried chicken. I like going swimming.  My favorite programming languages are Python and Java.
-      My favorite board game is Monopoly. 
+      My favorite board game is Monopoly. My favorite sports are tennis, ping pong, and football.
     </p>
 
     <img src="img/water.jpg" alt="water image">
