--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
   <div class="navbar">
+    <div class="list-div">
       <ul>
         <li>Fried Chicken</li>
         <li>Restaurant Style Tortilla Chips</li>
@@ -23,6 +24,7 @@
         <li>Tacos</li>
         <li>Chicken Fried Rice</li>
       </ul>
+    </div>
 
     <div class="div-with-links">
       <p>
@@ -61,23 +63,24 @@
     <img src="img/water.jpg" alt="water image">
   </div>
 
-
-  <div class="assignment">
-    <h1 id="assignment-section">Assignment</h1>
-    <ol>
-      <li>Assignment 0</li>
-      <li>Assignment 1</li>
-    </ol>
-
-    <div class="div-with-file-links">
-      <p>
-        <a href="ContactMe.html">ContactMe.html</a>
-      </p>
-      <p>
-        <a href="doc/Assignment1.pdf">Assignment1.pdf</a>
-      </p>
-    </div>
-
+  <div>
+    <div class="assignment">
+      <h1 id="assignment-section">Assignment</h1>
+      <ol>
+        <li>Assignment 0</li>
+        <li>Assignment 1</li>
+      </ol>
+  
+      <div class="div-with-file-links">
+        <p>
+          <a href="ContactMe.html">ContactMe.html</a>
+        </p>
+        <p>
+          <a href="doc/Assignment1.pdf">Assignment1.pdf</a>
+        </p>
+      </div>
+  
+  </div>
   
   </div>
 
@@ -118,7 +121,7 @@
       <h1>Schedule</h1>
 
       <table border="1">
-        <tr>
+        <tr id="row1">
           <td></td>
           <td>Monday</td>
           <td>Tuesday</td>
@@ -128,20 +131,20 @@
           <td>Saturday</td>
           <td>Sunday</td>
         </tr>
-        <tr>
+        <tr id="row2">
           <td>9:00 - 10:00</td>
           <td></td>
           <td colspan="4" rowspan="2">English A101</td>
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr id="row3">
           <td>10:00 - 11:00</td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr id="row4">
           <td>11:00 - 12:00</td>
           <td rowspan="2">Web Development</td>
           <td></td>
@@ -151,7 +154,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr id="row5">
           <td>12:00 - 1:00</td>
           <td rowspan="2">Software Engineering</td>
           <td rowspan="2">Software Engineering</td>
@@ -159,7 +162,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr id="row6">
           <td>1:00 - 2:00</td>
           <td></td>
           <td></td>
@@ -167,17 +170,17 @@
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr id="row7">
           <td>2:00 - 3:00</td>
-          <td rowspan="3">Algorithmic Design II</td>
+          <td rowspan="3" class="algorithmic_design">Algorithmic Design II</td>
           <td></td>
-          <td rowspan="3">Algorithmic Design II</td>
+          <td rowspan="3" class="algorithmic_design">Algorithmic Design II</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr id="row8">
           <td>3:00 - 4:00</td>
           <td></td>
           <td></td>
@@ -185,7 +188,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr id="row9">
           <td>4:00 - 5:00</td>
           <td></td>
           <td></td>
@@ -193,7 +196,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr id="row10">
           <td>5:00 - 6:00</td>
           <td></td>
           <td></td>
@@ -208,9 +211,9 @@
     </div>
   </div>
 
-   <footer>
+   
       <p>&copy;Copyright, Andrew Nguyen</p>
-    </footer>
+   
 
 
 
