--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     <div class="address">
       <h2 id="contact-information-section">Contact Information</h2>
 
-      <p>
-        <a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a>
-      </p>
+    
+      <a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a>
+   
 
     </div>
 
@@ -121,7 +121,7 @@
       <h1>Schedule</h1>
 
       <table border="1">
-        <tr id="row1">
+        <tr id="row-1">
           <td></td>
           <td>Monday</td>
           <td>Tuesday</td>
@@ -131,38 +131,38 @@
           <td>Saturday</td>
           <td>Sunday</td>
         </tr>
-        <tr id="row2">
+        <tr id="row-2">
           <td>9:00 - 10:00</td>
           <td></td>
-          <td colspan="4" rowspan="2">English A101</td>
+          <td colspan="4" rowspan="2" id="englishA101">English A101</td>
           <td></td>
           <td></td>
         </tr>
-        <tr id="row3">
+        <tr id="row-3">
           <td>10:00 - 11:00</td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
-        <tr id="row4">
+        <tr id="row-4">
           <td>11:00 - 12:00</td>
-          <td rowspan="2">Web Development</td>
+          <td rowspan="2" class="web-development">Web Development</td>
           <td></td>
-          <td rowspan="2">Web Development</td>
+          <td rowspan="2" class="web-development">Web Development</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
-        <tr id="row5">
+        <tr id="row-5">
           <td>12:00 - 1:00</td>
-          <td rowspan="2">Software Engineering</td>
-          <td rowspan="2">Software Engineering</td>
+          <td rowspan="2" class="software-engineering">Software Engineering</td>
+          <td rowspan="2" class="software-engineering">Software Engineering</td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
-        <tr id="row6">
+        <tr id="row-6">
           <td>1:00 - 2:00</td>
           <td></td>
           <td></td>
@@ -170,7 +170,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr id="row7">
+        <tr id="row-7">
           <td>2:00 - 3:00</td>
           <td rowspan="3" class="algorithmic_design">Algorithmic Design II</td>
           <td></td>
@@ -180,7 +180,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr id="row8">
+        <tr id="row-8">
           <td>3:00 - 4:00</td>
           <td></td>
           <td></td>
@@ -188,7 +188,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr id="row9">
+        <tr id="row-9">
           <td>4:00 - 5:00</td>
           <td></td>
           <td></td>
