--- a/ContactMe.html
+++ b/ContactMe.html
@@ -22,10 +22,11 @@
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link text-white" href="https://www.usca.edu">USC Aiken Website</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#assignment-section">Assignment Section</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#contact-information-section">Contact InformationSection</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#contact-information-section">Contact
+                InformationSection</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="https://www.espn.com/">ESPN</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="https://www.amazon.com/">Amazon</a> </li>
-          </ul>      
+          </ul>
         </div>
       </div>
 
@@ -39,12 +40,21 @@
         <form name="form">
           <fieldset name="fieldset">
             <legend name="contact-info-legend">Contact info</legend>
-            <p>
-              First name*: <input type="text" maxlength="10" placeholder="anonymous" name="fname" required>
-            </p>
-            <p>
-              Last name*: <input type="text" maxlength="10" placeholder="anonymous" name="lname" required>
-            </p>
+
+            <div class="form-floating mb-10">
+              <label for="firstname">
+                First name*: <input type="text" maxlength="10" placeholder="anonymous" name="fname" id="firstname"
+                  required>
+              </label>
+            </div>
+
+            <div class="form-floating mb-10">
+              <label for="lastname">
+                Last name*: <input type="text" maxlength="10" placeholder="anonymous" name="lname" id="lastname"
+                  required>
+              </label>
+            </div>
+            
             <div class="form-group">
               <p>
                 Email*: <input type="email" placeholder="name@domain.com" name="mail">
@@ -59,7 +69,8 @@
           <div class="form-group">
             <h3>Will you recommend this site?</h3>
             <p>
-              <label class="form-check-label"><input type="radio" class="form-check-input" name="recommend" value="yes">yes</label>
+              <label class="form-check-label"><input type="radio" class="form-check-input" name="recommend"
+                  value="yes">yes</label>
               <label class="radio-button label"><input type="radio" name="recommend" value="no">no</label>
             </p>
           </div>
@@ -76,10 +87,14 @@
             </select>
           </p>
 
-          <h3>Rate the website on a scale of 1 to 10</h3>
-          <p>
-            <input type="range" name="rating" min="1" max="10">10
-          </p>
+          <div class="form-group">
+            <input type="range">
+            <h3>Rate the website on a scale of 1 to 10</h3>
+            <p>
+              <input type="range" name="rating" min="1" max="10">10
+            </p>
+          </div>
+
 
           <h3>Additional Comments</h3>
           <p>
