--- a/index.html
+++ b/index.html
@@ -132,20 +132,20 @@
           <td>Sunday</td>
         </tr>
         <tr id="row-2">
-          <td>9:00 - 10:00</td>
+          <td class="time">9:00 - 10:00</td>
           <td></td>
           <td colspan="4" rowspan="2" id="englishA101">English A101</td>
           <td></td>
           <td></td>
         </tr>
         <tr id="row-3">
-          <td>10:00 - 11:00</td>
+          <td class="time">10:00 - 11:00</td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
         <tr id="row-4">
-          <td>11:00 - 12:00</td>
+          <td class="time">11:00 - 12:00</td>
           <td rowspan="2" class="web-development">Web Development</td>
           <td></td>
           <td rowspan="2" class="web-development">Web Development</td>
@@ -155,7 +155,7 @@
           <td></td>
         </tr>
         <tr id="row-5">
-          <td>12:00 - 1:00</td>
+          <td class="time">12:00 - 1:00</td>
           <td rowspan="2" class="software-engineering">Software Engineering</td>
           <td rowspan="2" class="software-engineering">Software Engineering</td>
           <td></td>
@@ -163,7 +163,7 @@
           <td></td>
         </tr>
         <tr id="row-6">
-          <td>1:00 - 2:00</td>
+          <td class="time">1:00 - 2:00</td>
           <td></td>
           <td></td>
           <td></td>
@@ -171,7 +171,7 @@
           <td></td>
         </tr>
         <tr id="row-7">
-          <td>2:00 - 3:00</td>
+          <td class="time">2:00 - 3:00</td>
           <td rowspan="3" class="algorithmic_design">Algorithmic Design II</td>
           <td></td>
           <td rowspan="3" class="algorithmic_design">Algorithmic Design II</td>
@@ -181,7 +181,7 @@
           <td></td>
         </tr>
         <tr id="row-8">
-          <td>3:00 - 4:00</td>
+          <td class="time">3:00 - 4:00</td>
           <td></td>
           <td></td>
           <td></td>
@@ -189,7 +189,7 @@
           <td></td>
         </tr>
         <tr id="row-9">
-          <td>4:00 - 5:00</td>
+          <td class="time">4:00 - 5:00</td>
           <td></td>
           <td></td>
           <td></td>
@@ -197,7 +197,7 @@
           <td></td>
         </tr>
         <tr id="row10">
-          <td>5:00 - 6:00</td>
+          <td class="time">5:00 - 6:00</td>
           <td></td>
           <td></td>
           <td></td>
@@ -211,8 +211,8 @@
     </div>
   </div>
 
-   
-      <p>&copy;Copyright, Andrew Nguyen</p>
+  <footer>  <p>&copy;Copyright, Andrew Nguyen</p></footer>
+    
    
 
 
