--- a/index.html
+++ b/index.html
@@ -109,15 +109,9 @@
 
     </div>
 
-
-
     <div class="address">
       <h2 id="contact-information-section">Contact Information</h2>
-
-    
-      <a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a>
-   
-
+      <p><a href="mailto:drewtuannguyen2003@gmail.com">drewtuannguyen2003@gmail.com</a></p>
     </div>
 
     <div class="schedule">
@@ -214,7 +208,7 @@
     </div>
   </div>
 
-  <footer>  <p>&copy;Copyright, Andrew Nguyen</p></footer>
+  <footer><p>&copy;Copyright, Andrew Nguyen</p></footer>
     
    
 
