--- a/ContactMe.html
+++ b/ContactMe.html
@@ -7,19 +7,20 @@
   <title>Document</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <!--bootstrap css-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 </head>
 
-<body>
+<body class="p-3 mb-2 bg-info text-dark">
 
   <div class="container">
     <div class="row">
       <div class="col">
-        <div class="navbar navbar-expand-lg navbar-light bg-dark">
-          <ul class="navbar-nav">
+        <div class="navbar navbar-expand-lg navbar-light bg-warning fixed-top">
+          <ul class="navbar-nav fw-semibold "> 
             <li class="nav-item"><a class="nav-link text-white" href="https://www.usca.edu">USC Aiken Website</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#assignment-section">Assignment Section</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#contact-information-section">Contact
@@ -29,41 +30,41 @@
           </ul>
         </div>
       </div>
-
     </div>
 
     <div class="row">
-      <div class="column">
-        <iframe width="400" height="400" src="video/20230925_102004_1.mp4" allowfullscreen></iframe>
+      <div class="col">
+       <p>
+        <iframe  width="400" height="400" class="rounded-4" src="video/20230925_102004_1.mp4" allowfullscreen></iframe>
+       </p>
       </div>
-      <div class="column">
-        <form name="form">
+      <div class="col p-2 g-col-6">
+        <form name="form-floating mt-20" >
           <fieldset name="fieldset">
             <legend name="contact-info-legend">Contact info</legend>
 
-            <div class="form-floating mb-10">
-              <label for="firstname">
-                First name*: <input type="text" maxlength="10" placeholder="anonymous" name="fname" id="firstname"
-                  required>
-              </label>
+            <div class="form-floating mb-12">
+                First name*: <input class="form-control" type="text" maxlength="10" placeholder="anonymous" name="fname" id="firstname"
+                  required>           
             </div>
 
             <div class="form-floating mb-10">
-              <label for="lastname">
-                Last name*: <input type="text" maxlength="10" placeholder="anonymous" name="lname" id="lastname"
+                Last name*: <input class="form-control" type="text" maxlength="10" placeholder="anonymous" name="lname" id="lastname"
                   required>
-              </label>
             </div>
             
             <div class="form-group">
               <p>
-                Email*: <input type="email" placeholder="name@domain.com" name="mail">
+                Email*: <input class="form-control" type="email" placeholder="name@domain.com" name="mail">
               </p>
+              <small class="form-text text-muted">
+                Your email will not be shared
+              </small>
             </div>
           </fieldset>
           <div class="form-group">
             <p>
-              Password*: <input type="password" maxlength="20" placeholder="anonymous" name="password" required>
+              Password*: <input class="form-control" type="password" maxlength="20" placeholder="anonymous" name="password" required>
             </p>
           </div>
           <div class="form-group">
@@ -71,12 +72,12 @@
             <p>
               <label class="form-check-label"><input type="radio" class="form-check-input" name="recommend"
                   value="yes">yes</label>
-              <label class="radio-button label"><input type="radio" name="recommend" value="no">no</label>
+              <label class="radio-button label"><input type="radio"  class="form-check-input" name="recommend" value="no">no</label>
             </p>
           </div>
           <h3>Select your favorite website below:</h3>
           <p>
-            <select name="website-selection-box" size="4" multiple>
+            <select class="form-control" name="website-selection-box" size="4" multiple>
               <option value="Google">Google</option>
               <option value="Facebook">Facebook</option>
               <option value="Twitter">Twitter</option>
@@ -88,10 +89,9 @@
           </p>
 
           <div class="form-group">
-            <input type="range">
             <h3>Rate the website on a scale of 1 to 10</h3>
             <p>
-              <input type="range" name="rating" min="1" max="10">10
+              <input class="form-control" type="range" name="rating" min="1" max="10">10
             </p>
           </div>
 
@@ -102,7 +102,7 @@
           </p>
           <h3>Restaurants</h3>
           <p>
-            <select name="restaurant-dropdown-box">
+            <select class="form-control" name="restaurant-dropdown-box">
               <option value="Chick-Fil-A">Chick-Fil-A</option>
               <option value="Mcdonald's">Mcdonald's</option>
               <option value="Pablo's">Pablo's</option>
@@ -113,16 +113,16 @@
             </select>
           </p>
           <p>
-            <input type="checkbox" name="desserts" value="Cream Puffs">Cream Puffs
-            <input type="checkbox" name="desserts" value="M&Ms">M&Ms
-            <input type="checkbox" name="desserts" value="Bundt Cake">Bundt Cake
-            <input type="checkbox" name="desserts" value="Apple Pie">Apple Pie
-            <input type="checkbox" name="desserts" value="Whoopie Pies">Whoopie Pies
-            <input type="checkbox" name="desserts" value="Chiffon Cake">Chiffon Cake
+            <input class="form-check" type="checkbox" name="desserts" value="Cream Puffs">Cream Puffs
+            <input class="form-check" type="checkbox" name="desserts" value="M&Ms">M&Ms
+            <input class="form-check" type="checkbox" name="desserts" value="Bundt Cake">Bundt Cake
+            <input class="form-check" type="checkbox" name="desserts" value="Apple Pie">Apple Pie
+            <input class="form-check" type="checkbox" name="desserts" value="Whoopie Pies">Whoopie Pies
+            <input class="form-check" type="checkbox" name="desserts" value="Chiffon Cake">Chiffon Cake
           </p>
 
           <p>
-            <input type="submit" name="submit button">
+            <input class="form-control" type="submit" name="submit button">
           </p>
         </form>
       </div>
