--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         it.<br>
         My favorite board game is Monopoly. My favorite sports are tennis, ping pong, and football.
       </p>
+      <p>
+        <a href="ContactMe.html">ContactMe.html</a>
+      </p>
     </div>
     <img src="img/water.jpg" alt="water image">
   </div>
