--- a/powerbill.html
+++ b/powerbill.html
@@ -56,9 +56,11 @@
         <input class="form-control" type="text" id="sales-tax-textbox" name="sales-tax-textbox">
       </div>
 
-    
+      <div>
         <input type="button" value="submit" id="submit-button" />
         <input type="reset" name="reset" value="Reset" id="reset-button" >
+      </div>
+       
   
 
     </form>
