--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p>
           <a href="doc/Assignment1.pdf">Assignment1.pdf</a>
         </p>
-        <p><a href="powerbill.html">Georgia Power Bill Calculator</a></p>
+        <p><a href="powerbill.html">Calculator</a></p>
       </div>
   
   </div>
