--- a/powerbill.html
+++ b/powerbill.html
@@ -67,53 +67,51 @@
   </div>
 
   <div class="container" id="container-for-form2">
-    <div class="row">
       <form name="details-of-bill-form" id="details-of-bill-form">
         <h1>Details of your bill</h1>
-        <div class="col">
+        <div>
           Base Charge:
           <label class="result-label" id="base-charge-label"></label>
         </div>
-        <div class="col">
+        <div>
           Tier 1 Component (kWh):
           <label class="result-label" id="tier1-component-label"></label>
         </div>
-        <div class="col">
+        <div>
           Tier 2 Component (kWh):
           <label class="result-label" id="tier2-component-label"></label>
         </div>
-        <div class="col">Tier 3 Component (kWh):
+        <div>Tier 3 Component (kWh):
           <label class="result-label" id="tier3-component-label"></label>
         </div>
-        <div class="col">Base Revenue -- Base Bill Subtotal:
+        <div>Base Revenue -- Base Bill Subtotal:
           <label class="result-label" id="base-revenue-label"></label>
         </div>
-        <div class="col">Fuel Cost Rider:
+        <div>Fuel Cost Rider:
           <label class="result-label" id="fuel-cost-rider"></label>
         </div>
-        <div class="col">Demand Side Management Residential Rider:
+        <div>Demand Side Management Residential Rider:
           <label class="result-label" id="demand-side-management-residential-rider-label"></label>
         </div>
         <div class="col">Nuclear Construction Cost Recovery Rider:
           <label class="result-label" id="nuclear-construction-cost-recovery-label"></label>
         </div>
-        <div class="col">Environmental Compliance Cost Recovery Rider:
+        <div>Environmental Compliance Cost Recovery Rider:
           <label class="result-label" id="environmental-compliance-cost-recovery-label"></label>
         </div>
-        <div class="col">Total Revenue -- Current Service Subtotal:
+        <div>Total Revenue -- Current Service Subtotal:
           <label class="result-label" id="total-revenue-label"></label>
         </div>
-        <div class="col">Franchise Fee:
+        <div >Franchise Fee:
           <label class="result-label" id="franchise-fee-label"></label>
         </div>
-        <div class="col">Total (excluding tax):
+        <div>Total (excluding tax):
           <label class="result-label" id="Total-excluding-tax-label"></label>
         </div>
-        <div class="col">TOTAL (w/tax):
+        <div >TOTAL (w/tax):
           <label class="result-label" id="total-with-tax-label"></label>
         </div>
       </form>
-    </div>
   </div>
 
 
