--- a/realestate.html
+++ b/realestate.html
@@ -53,6 +53,13 @@
         </select>
         
         <select name="year_drop-down_list" id="year_drop-down_list">
+          <option value="2004" class="year_option">2004</option>
+          <option value="2005" class="year_option">2005</option>
+          <option value="2006" class="year_option">2006</option>
+          <option value="2007" class="year_option">2007</option>
+          <option value="2008" class="year_option">2008</option>
+          <option value="2009" class="year_option">2009</option>
+          <option value="2010" class="year_option">2010</option>
           <option value="2011" class="year_option">2011</option>
           <option value="2012" class="year_option">2012</option>
           <option value="2013" class="year_option">2013</option>
