--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
         <p>
           <a href="doc/Assignment1.pdf">Assignment1.pdf</a>
         </p>
-        <p><a href="powerbill.html">Calculator</a></p>
+        <p>
+          <a href="powerbill.html">Calculator</a>
+        </p>
+        <p>
+          <a href="realestate.html">realestate.html</a>
+        </p>
       </div>
   
   </div>
@@ -214,11 +219,6 @@
 
   <footer><p>&copy;Copyright, Andrew Nguyen</p></footer>
     
-   
-
-
-
-
 </body>
 
 </html>
