--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <p>
         <a href="https://www.amazon.com/">Amazon</a>
       </p>
+      
     </div>
   </div>
 
@@ -90,6 +91,7 @@
         <p>
           <a href="realestate.html">realestate.html</a>
         </p>
+        <p ><a href="imageGallery.html">imageGallery.html</a></p>
       </div>
   
   </div>
